--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,22 @@
 .App {
-  text-align: center;
+  padding-top: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+label {
+  display: block;
+  padding: 5px 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+span {
+  display: block;
+  padding: 5px 20px;
 }
 
-.App-link {
-  color: #61dafb;
+span:first-of-type {
+  margin-top: 30px;
 }
 
-.heart {
-  color: #ff0000;
-}
-
-.small {
-  font-size: 0.75rem;
+button {
+  margin-top: 50px;
+  margin-left: 20px;
 }
